# SpatialQueryBenchmark

./: .gitmodules  CMakeLists.txt  README.md  gen.sh  query.sh
cmake/: FindRTSpatial.cmake
expr/: common.sh
expr/dataset/: gen_query.sh  gen_synthetic.sh  tiger2wkt.py
expr/draw/: common.py  draw_pip.py  draw_query.py  draw_scalability.py  draw_tune_parallelism.py  draw_update.py
expr/query/: cuspatial_pip.py  cuspatial_point_contains.py  pip.sh  query.sh  scalability.sh  update.sh  vary_parallelism.sh
src/: benchmark_configs.h  cdb_loader.h  common.h  config.h  flags.cpp  flags.h  geom_common.h  stopwatch.h  time_stat.h  wkt_loader.h
src/query/: loader.h  pip.cpp  point_query.h  query.cpp  range_query.h
src/query/boost/: point_query.h  range_query.h  update.h
src/query/cgal/: point_query.h
src/query/glin/: point_query.h  range_query.h
src/query/lbvh/: point_query.cu  point_query.h  range_query.cu  range_query.h
src/query/pargeo/: point_query.h
src/query/rtspatial/: common.h  pip_context.h  pip_handler.h  pip_query.cu  pip_query.h  point_query.cu  point_query.h  range_query.cu  range_query.h  update.cu  update.h
